ifc-macros/test/define_low_as_high.stderr
error: Cannot assign high expression to low variable
 --> $DIR/define_low_as_high.rs:7:9
  |
7 |         let _y: usize  = x;
  |         ^^^^^^^^^^^^^^^^^^^
  |
help: Low Variable
 --> $DIR/define_low_as_high.rs:7:13
  |
7 |         let _y: usize  = x;
  |             ^^
help: High Expression
 --> $DIR/define_low_as_high.rs:7:26
  |
7 |         let _y: usize  = x;
  |                          ^
